fix: update multitenant env, improve deploy script, add permissions fix script
- Updated `.env.multitenant.sample` with improved defaults and documentation.
- Enhanced `scripts/deploy-multitenant.sh` for better reliability and error handling.
- Added new `scripts/fix-permissions.sh` to ensure correct file and directory permissions in multi-tenant setups.

--- a/.env.multitenant.sample
+++ b/.env.multitenant.sample
@@ -25,7 +25,7 @@ LISTMONK_DEFAULT_TENANT_NAME=Default Organization
 LISTMONK_DEFAULT_TENANT_SLUG=default
 
 # Super admin email (for cross-tenant management)
-LISTMONK_SUPER_ADMIN_EMAIL=admin@localhost
+LISTMONK_SUPER_ADMIN_EMAIL=ben@frizzlendev.co.uk
 
 #=============================================================================
 # DOMAIN AND ROUTING CONFIGURATION
