--- a/docker-compose.multitenant.yml
+++ b/docker-compose.multitenant.yml
@@ -18,7 +18,10 @@ x-db-credentials: &db-credentials
 services:
   # Multi-tenant Listmonk app
   app:
-    image: listmonk/listmonk:latest
+    build:
+      context: .
+      dockerfile: Dockerfile.build
+    image: listmonk-multitenant:latest
     container_name: listmonk_app_mt
     restart: unless-stopped
     ports:
